[workspace]
members = ["cargo-pio", "ldproxy"]

[package]
name = "embuild"
version = "0.27.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>", "Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2018"
categories = ["embedded", "development-tools::build-utils"]
keywords = ["cargo", "platformio", "build-dependencies"]
description = "A build support library for embedded Rust"
repository = "https://github.com/ivmarkov/embuild"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

# Platformio support
pio = ["ureq", "bindgen", "tempfile", "which", "manifest"]
# cmake file-api & utilities
cmake = ["dep-cmake", "tempfile", "bindgen"]
# glob utilities
glob = ["globwalk"]
# Cargo.toml manifest utilities
manifest = ["cargo_toml"]
# esp-idf installer
espidf = ["tempfile", "which", "git"]
# git utilities
git = ["remove_dir_all"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
xmas-elf = "0.8"
bitflags = "1.3"
shlex = "1.0"
dirs = "4.0"

remove_dir_all = { version = "0.7", optional = true }
cargo_toml = { version = "0.9", optional = true }
which = { version = "4.1", optional = true }
globwalk = { version = "0.8", optional = true }
tempfile = { version = "3.2", optional = true }
ureq = { version = "2.1", optional = true }
bindgen = { version = "0.59.2", optional = true }
dep-cmake = { package = "cmake", version = "0.1", optional = true }
