[workspace]
members = ["cargo-pio", "ldproxy", "cargo-idf"]

[package]
name = "embuild"
version = "0.33.0"
authors = [
    "Ivan Markov <ivan.markov@gmail.com>",
    "Dominik Gschwind <dominik.gschwind99@gmail.com>",
]
edition = "2021"
rust-version = "1.58"
categories = ["embedded", "development-tools::build-utils"]
keywords = ["cargo", "platformio", "build-dependencies"]
description = "A build support library for embedded Rust"
repository = "https://github.com/ivmarkov/embuild"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Platformio support
pio = [
    "ureq",
    "bindgen",
    "tempfile",
    "which",
    "manifest",
    "serde",
    "serde_json",
]
# cmake file-api & utilities
cmake = ["dep-cmake", "tempfile", "bindgen", "serde", "serde_json", "strum"]
# glob utilities
glob = ["globwalk"]
# Cargo.toml and config.toml utilities
manifest = ["cargo_toml", "toml"]
# esp-idf installer
espidf = [
    "tempfile",
    "which",
    "git",
    "serde",
    "serde_json",
    "strum",
    "home",
    "regex",
]
# git utilities
git = ["remove_dir_all"]
# kconfig utilities
kconfig = ["serde", "serde_json"]
# elf manipulation
elf = ["xmas-elf"]

[dependencies]
anyhow = "1"
log = "0.4"
bitflags = "1"
shlex = "1"
thiserror = "1"
filetime = "0.2"

xmas-elf = { version = "0.9", optional = true }
home = { version = "0.5", optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.7", optional = true }
remove_dir_all = { version = "0.8", optional = true }
cargo_toml = { version = "0.15", optional = true }
which = { version = "4.1", optional = true }
globwalk = { version = "0.8", optional = true }
tempfile = { version = "3", optional = true }
ureq = { version = "2", optional = true }
bindgen = { version = "0.71.1", optional = true }
dep-cmake = { package = "cmake", version = "0.1", optional = true }
regex = { version = "1.5", optional = true, default-features = false, features = [
    "std",
] }
