[package]
name = "cargo-idf"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
categories = ["embedded", "development-tools::cargo-plugins"]
keywords = ["idf", "esp-idf", "esp32", "tool"]

[dependencies]
embuild = { version = "0.27", path = "..", features = [] }
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
env_logger = "0.8"
cargo_metadata = "0.14"
clap = "3.0.0-rc.0"
escargot = "0.5"
