[package]
name = "cargo-pio"
version = "0.24.1"
edition = "2018"
authors = ["Ivan Markov <ivan.markov@gmail.com>", "Dominik Gschwind <dominik.gschwind99@gmail.com>"]
categories = ["embedded", "development-tools::cargo-plugins"]
keywords = ["cargo", "platformio"]
description = "Cargo<->PlatformIO integration: a cargo subcommand"
repository = "https://github.com/ivmarkov/embuild"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
embuild = { version = "0.24.2", path = ".." }
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
env_logger = "0.8"
structopt = { version = "0.3.22" }
tempfile = "3.2"