[package]
name = "ldproxy"
version = "0.1.1"
edition = "2018"
authors = ["Ivan Markov <ivan.markov@gmail.com>", "Dominik Gschwind <dominik.gschwind99@gmail.com>"]
categories = ["embedded", "command-line-utilities"]
keywords = ["linker", "linker-proxy", "cli"]
description = "A linker proxy tool"
repository = "https://github.com/ivmarkov/embuild/ldproxy"
license = "MIT"
readme = "README.md"

[dependencies]
embuild = { version = "0.23.2", path = ".." }
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
env_logger = "0.8"